# ai-service

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  evaluation.py  main.py
app/api/: __init__.py
app/api/routes/: analyze.py  health.py
app/schemas/: analyze.py
app/services/: __init__.py  acoustic_detection_service.py  analyze_service.py  audio_normalization_service.py  audio_source.py  risk_aggregation_service.py  transcription_service.py
docs/: triggered-streaming-spike.md
tests/: test_analyze.py  test_evaluation.py  test_health.py
