[project]
name = "ai-service"
version = "0.1.0"
description = "FastAPI service for Cicla Vera evidence analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
ai-service = "app.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true
